# object-detection-lab

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/espimsystems/visionlab/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/espimsystems/visionlab/: MainActivity.kt  VisionLabApplication.kt
app/src/main/java/com/espimsystems/visionlab/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/espimsystems/visionlab/: ExampleUnitTest.kt
benchmark/macrobenchmark/: build.gradle.kts
benchmark/macrobenchmark/src/androidTest/java/com/espimsystems/visionlab/benchmark/macrobenchmark/: BenchmarkTargets.kt  DetectionRuntimeBenchmarks.kt  ExampleInstrumentedTest.kt  StartupBenchmarks.kt
benchmark/macrobenchmark/src/test/java/com/espimsystems/visionlab/benchmark/macrobenchmark/: ExampleUnitTest.kt
core/camera/: build.gradle.kts
core/camera/src/androidTest/java/com/espimsystems/visionlab/core/camera/: ExampleInstrumentedTest.kt
core/camera/src/main/java/com/espimsystems/visionlab/core/camera/: CameraFrameSource.kt
core/common/: build.gradle.kts
core/cpp/: build.gradle.kts
core/cpp/src/main/cpp/: CMakeLists.txt  vision_native.cpp
core/designsystem/: build.gradle.kts
core/dispatchers/: build.gradle.kts
core/ml/: build.gradle.kts
core/ui/: build.gradle.kts
feature/detection/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+36 files in other folders)
